--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta charset="utf-8">
-	<title>Le Louvre</title>
+	<title>Le Louvre - Accueil</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<!-- importation de la police google -->
 	<link href="https://fonts.googleapis.com/css2?family=Newsreader&display=swap" rel="stylesheet">
@@ -14,21 +14,27 @@
 <body>
 	<!-- création du menu en haut de page -->
 	<div id="menu" >
-		<div class="titremenu" id="logo">
-			<p> <a href="https://www.louvre.fr/"> <img src="images/logolouvre.png" alt="logo Louvre" height="70px"> </a></p>
-		</div>
-		<div class="titremenu">
-			<p> <a href="#"> Contact </a></p>
-		</div>
-		<div class="titremenu">
-			<p> <a href="#"> Salles </a></p>
-		</div>
-		<div class="titremenu">
-			<p> <a href="#"> Expositions </a></p>
-		</div>
-		<div class="titremenu">
-			<p> <a href="#"> Informations </a></p>
-		</div>
+		<a href="https://www.louvre.fr/" class="titremenu" id="logo"> <img src="images/logolouvre.png" alt="logo Louvre" height="70px"> </a>
+		<a href="index.html" class="titremenu" >
+			<div>
+				Accueil
+			</div>
+		</a>
+		<a href="salles.html" class="titremenu">
+			<div>
+				<p>Salles</p>
+			</div>
+		</a>
+		<a href="#" class="titremenu" >
+			<div>
+				<p>Expositions</p>
+			</div>
+		</a>
+		<a href="#" class="titremenu" >
+			<div>
+				<p>Informations</p>
+			</div>
+		</a>
 	</div>
 
 	<!-------------------------------------------------------------------------->
