--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
 	<!-- création du menu en haut de page -->
 	<div id="menu" >
 		<a href="https://www.louvre.fr/" class="titremenu" id="logo"> <img src="images/logolouvre.png" alt="logo Louvre" height="70px"> </a>
-		<a href="index.html" class="titremenu" >
+		<a href="index.html" class="titremenu" id="accueil" >
 			<div>
 				Accueil
 			</div>
 		</a>
-		<a href="salles.html" class="titremenu">
+		<a href="salles.html" class="titremenu" id="salle" >
 			<div>
 				<p>Salles</p>
 			</div>
 		</a>
-		<a href="#" class="titremenu" >
+		<a href="#" class="titremenu" id="expo" >
 			<div>
 				<p>Expositions</p>
 			</div>
 		</a>
-		<a href="#" class="titremenu" >
+		<a href="#" class="titremenu" id="info" >
 			<div>
 				<p>Informations</p>
 			</div>
