--- a/salles.html
+++ b/salles.html
@@ -12,27 +12,50 @@
 	<!-- création du menu en haut de page -->
 	<div id="menu" >
 		<a href="https://www.louvre.fr/" class="titremenu" id="logo"> <img src="images/logolouvre.png" alt="logo Louvre" height="70px"> </a>
-		<a href="index.html" class="titremenu" >
+		<a href="index.html" class="titremenu" id="accueil" >
 			<div>
 				Accueil
 			</div>
 		</a>
-		<a href="salles.html" class="titremenu">
+		<a href="salles.html" class="titremenu" id="salle" >
 			<div>
 				<p>Salles</p>
 			</div>
 		</a>
-		<a href="#" class="titremenu" >
+		<a href="#" class="titremenu" id="expo" >
 			<div>
 				<p>Expositions</p>
 			</div>
 		</a>
-		<a href="#" class="titremenu" >
+		<a href="#" class="titremenu" id="info" >
 			<div>
 				<p>Informations</p>
 			</div>
 		</a>
 	</div>
-    
+
+	<div id="main" >
+			<div id="menu2">
+				<h1>Musée du Louvre </h1>
+				<br>
+				<p>
+					Le musée du Louvre est un musée situé dans le 1er arrondissement de Paris, en France.
+					Une préfiguration en est imaginée en 1775-1776 par le comte d'Angiviller, directeur général des Bâtiments du roi, comme lieu de présentation des chefs-d'œuvre de la collection de la Couronne. Ce musée n'a été inauguré qu'en 1793 sous l'appellation de Muséum central des arts de la République dans le palais du Louvre, ancienne résidence royale située au centre de Paris, et il est aujourd'hui le plus grand musée d'art et d'antiquités au monde. Sa surface d'exposition est de 72 735 m<sup>2</sup>.
+					Fin 2016, ses collections comprenaient 554 731 œuvres, dont 35 000 exposées et 264 486 œuvres graphiques. Celles-ci présentent l'art occidental du Moyen Âge à 1848, celui des civilisations antiques qui l'ont précédé et influencé (orientales, égyptienne, grecque, étrusque et romaine), les arts des premiers chrétiens et de l'islam.
+					Situé dans le 1er arrondissement de Paris, sur la rive droite entre la Seine et la rue de Rivoli, le musée se signale par la pyramide de verre de son hall d'accueil, érigée en 1989 dans la cour Napoléon et qui en est devenue emblématique, tandis que la statue équestre de Louis XIV constitue le point de départ de l'axe historique parisien.
+				</p>
+				<p class="sources" > sources : <a class="sources" href="https://fr.wikipedia.org/wiki/Mus%C3%A9e_du_Louvre"> <abbr title="clique pour y accéder"> wikipedia </abbr></a></p>
+		</div>
+			<div id="texte">
+				<h1>Palais du Louvre </h1>
+				<br>
+				<p>
+					Le palais du Louvre est un ancien palais royal situé dans le 1er arrondissement de Paris sur la rive droite de la Seine, entre le jardin des Tuileries et l'église Saint-Germain-l'Auxerrois. S'étendant sur une surface bâtie de plus de 135 000 m<sup>2</sup>, le palais du Louvre est le plus grand palais européen, et le second plus grand bâtiment du continent après le Marché aux fleurs d'Aalsmeer. Il abrite aujourd'hui le musée du Louvre.
+					La construction du Louvre est indissociable de l'histoire de Paris. Elle s'étend sur plus de 800 ans, bien que le plan général du palais n'ait été imaginé qu'à la Renaissance. Charles V y établit sa résidence, donnant au palais un statut qu'il a conservé jusqu'au règne de Louis XIV.
+					Avec 10,2 millions de visiteurs en 2018 — dont un quart de Français —, c'est le musée le plus visité au monde3 et le site culturel le plus visité en France devant la tour Eiffel, la cathédrale Notre-Dame de Paris étant en tête des monuments à l'accès libre avec 13,6 millions de visiteurs estimés.
+				</p>
+				<p class="sources" > sources : <a class="sources" href="https://fr.wikipedia.org/wiki/Palais_du_Louvre"> <abbr title="clique pour y accéder"> wikipedia </abbr></a></p>
+			</div>
+	</div>
 </body>
 </html>
