--- a/salles.html
+++ b/salles.html
@@ -36,7 +36,7 @@
 
 	<div id="main" >
 			<div id="menu2">
-				<h1>Musée du Louvre </h1>
+				<h1>Navigation</h1>
 				<br>
 				<p>
 					Le musée du Louvre est un musée situé dans le 1er arrondissement de Paris, en France.
@@ -47,7 +47,7 @@
 				<p class="sources" > sources : <a class="sources" href="https://fr.wikipedia.org/wiki/Mus%C3%A9e_du_Louvre"> <abbr title="clique pour y accéder"> wikipedia </abbr></a></p>
 		</div>
 			<div id="texte">
-				<h1>Palais du Louvre </h1>
+				<h1>Salles</h1>
 				<br>
 				<p>
 					Le palais du Louvre est un ancien palais royal situé dans le 1er arrondissement de Paris sur la rive droite de la Seine, entre le jardin des Tuileries et l'église Saint-Germain-l'Auxerrois. S'étendant sur une surface bâtie de plus de 135 000 m<sup>2</sup>, le palais du Louvre est le plus grand palais européen, et le second plus grand bâtiment du continent après le Marché aux fleurs d'Aalsmeer. Il abrite aujourd'hui le musée du Louvre.
