--- a/salles.html
+++ b/salles.html
@@ -36,15 +36,24 @@
 
 	<div id="main" >
 			<div id="menu2">
-				<h1>Navigation</h1>
-				<br>
-				<p>
-					Le musée du Louvre est un musée situé dans le 1er arrondissement de Paris, en France.
-					Une préfiguration en est imaginée en 1775-1776 par le comte d'Angiviller, directeur général des Bâtiments du roi, comme lieu de présentation des chefs-d'œuvre de la collection de la Couronne. Ce musée n'a été inauguré qu'en 1793 sous l'appellation de Muséum central des arts de la République dans le palais du Louvre, ancienne résidence royale située au centre de Paris, et il est aujourd'hui le plus grand musée d'art et d'antiquités au monde. Sa surface d'exposition est de 72 735 m<sup>2</sup>.
-					Fin 2016, ses collections comprenaient 554 731 œuvres, dont 35 000 exposées et 264 486 œuvres graphiques. Celles-ci présentent l'art occidental du Moyen Âge à 1848, celui des civilisations antiques qui l'ont précédé et influencé (orientales, égyptienne, grecque, étrusque et romaine), les arts des premiers chrétiens et de l'islam.
-					Situé dans le 1er arrondissement de Paris, sur la rive droite entre la Seine et la rue de Rivoli, le musée se signale par la pyramide de verre de son hall d'accueil, érigée en 1989 dans la cour Napoléon et qui en est devenue emblématique, tandis que la statue équestre de Louis XIV constitue le point de départ de l'axe historique parisien.
-				</p>
-				<p class="sources" > sources : <a class="sources" href="https://fr.wikipedia.org/wiki/Mus%C3%A9e_du_Louvre"> <abbr title="clique pour y accéder"> wikipedia </abbr></a></p>
+				<div id="tete" >
+					<h1>Navigation</h1>
+				</div>
+				<div class="titre" >
+					<h3>Antiquité</h3>
+				</div>
+				<div class="titre">
+					<h3>Sculpture</h3>
+				</div>
+				<div class="titre">
+					<h3>Peinture</h3>
+				</div>
+				<div class="titre">
+					<h3>Pavillon de l'Horloge</h3>
+				</div>
+				<div class="titre">
+					<h3>Petite Galerie</h3>
+				</div>
 		</div>
 			<div id="texte">
 				<h1>Salles</h1>
