--- a/salles.html
+++ b/salles.html
@@ -36,35 +36,99 @@
 
 	<div id="main" >
 			<div id="menu2">
-				<div id="tete" >
-					<h1>Navigation</h1>
+				<div id="menu2accueil"  class="menu20">
+					<div id="tete" >
+						<h1>Navigation</h1>
+					</div>
+					<div class="titre deroulant" id="antiquite">
+						<h3>Antiquités</h3>
+					</div>
+					<div class="titre deroulant" id="sculptures">
+						<h3>Sculptures</h3>
+					</div>
+					<div class="titre deroulant" id="peintures">
+						<h3>Peintures</h3>
+					</div>
+					<div class="titre" id="pavillon">
+						<h3>Pavillon de l'Horloge</h3>
+					</div>
+					<div class="titre" id="galerie">
+						<h3>Petite Galerie</h3>
+					</div>
 				</div>
-				<div class="titre" >
-					<h3>Antiquité</h3>
+				<div id="menuantiquite" class="menu20" >
+					<div id="tete" >
+						<h1><img class="retour" src="images/fleche.png" alt="retour" height="20px"> Antiquités</h1>
+					</div>
+					<div class="titre" >
+						<h3>Proche Orient</h3>
+					</div>
+					<div class="titre">
+						<h3>Egyptiennes</h3>
+					</div>
+					<div class="titre">
+						<h3>Grecques</h3>
+					</div>
+					<div class="titre">
+						<h3>Romaines</h3>
+					</div>
+					<div class="titre">
+						<h3>Italiques et Etrusques</h3>
+					</div>
 				</div>
-				<div class="titre">
-					<h3>Sculpture</h3>
+				<div id="menusculptures" class="menu20" >
+					<div id="tete" >
+						<h1><img class="retour" src="images/fleche.png" alt="retour" height="20px"> Sculptures</h1>
+					</div>
+					<div class="titre" >
+						<h3>France</h3>
+					</div>
+					<div class="titre">
+						<h3>Italie</h3>
+					</div>
+					<div class="titre">
+						<h3>Espagne</h3>
+					</div>
+					<div class="titre">
+						<h3>Europe du Nord</h3>
+					</div>
 				</div>
-				<div class="titre">
-					<h3>Peinture</h3>
+				<div id="menupeintures" class="menu20" >
+					<div id="tete" >
+						<h1><img class="retour" src="images/fleche.png" alt="retour" height="20px"> Peintures</h1>
+					</div>
+					<div class="titre" >
+						<h3>France</h3>
+					</div>
+					<div class="titre">
+						<h3>Europe du Nord</h3>
+					</div>
+					<div class="titre">
+						<h3>Italie</h3>
+					</div>
+					<div class="titre">
+						<h3>Espagne</h3>
+					</div>
+					<div class="titre">
+						<h3>Grêce/Russie</h3>
+					</div>
+					<div class="titre">
+						<h3>Grande-Bretagne/USA</h3>
+					</div>
 				</div>
-				<div class="titre">
-					<h3>Pavillon de l'Horloge</h3>
-				</div>
-				<div class="titre">
-					<h3>Petite Galerie</h3>
-				</div>
-		</div>
-			<div id="texte">
-				<h1>Salles</h1>
-				<br>
-				<p>
-					Le palais du Louvre est un ancien palais royal situé dans le 1er arrondissement de Paris sur la rive droite de la Seine, entre le jardin des Tuileries et l'église Saint-Germain-l'Auxerrois. S'étendant sur une surface bâtie de plus de 135 000 m<sup>2</sup>, le palais du Louvre est le plus grand palais européen, et le second plus grand bâtiment du continent après le Marché aux fleurs d'Aalsmeer. Il abrite aujourd'hui le musée du Louvre.
-					La construction du Louvre est indissociable de l'histoire de Paris. Elle s'étend sur plus de 800 ans, bien que le plan général du palais n'ait été imaginé qu'à la Renaissance. Charles V y établit sa résidence, donnant au palais un statut qu'il a conservé jusqu'au règne de Louis XIV.
-					Avec 10,2 millions de visiteurs en 2018 — dont un quart de Français —, c'est le musée le plus visité au monde3 et le site culturel le plus visité en France devant la tour Eiffel, la cathédrale Notre-Dame de Paris étant en tête des monuments à l'accès libre avec 13,6 millions de visiteurs estimés.
-				</p>
-				<p class="sources" > sources : <a class="sources" href="https://fr.wikipedia.org/wiki/Palais_du_Louvre"> <abbr title="clique pour y accéder"> wikipedia </abbr></a></p>
 			</div>
+				<div id="texte">
+					<h1>Salles</h1>
+					<br>
+					<p>
+						Le palais du Louvre est un ancien palais royal situé dans le 1er arrondissement de Paris sur la rive droite de la Seine, entre le jardin des Tuileries et l'église Saint-Germain-l'Auxerrois. S'étendant sur une surface bâtie de plus de 135 000 m<sup>2</sup>, le palais du Louvre est le plus grand palais européen, et le second plus grand bâtiment du continent après le Marché aux fleurs d'Aalsmeer. Il abrite aujourd'hui le musée du Louvre.
+						La construction du Louvre est indissociable de l'histoire de Paris. Elle s'étend sur plus de 800 ans, bien que le plan général du palais n'ait été imaginé qu'à la Renaissance. Charles V y établit sa résidence, donnant au palais un statut qu'il a conservé jusqu'au règne de Louis XIV.
+						Avec 10,2 millions de visiteurs en 2018 — dont un quart de Français —, c'est le musée le plus visité au monde3 et le site culturel le plus visité en France devant la tour Eiffel, la cathédrale Notre-Dame de Paris étant en tête des monuments à l'accès libre avec 13,6 millions de visiteurs estimés.
+					</p>
+					<p class="sources" > sources : <a class="sources" href="https://fr.wikipedia.org/wiki/Palais_du_Louvre"> <abbr title="clique pour y accéder"> wikipedia </abbr></a></p>
+				</div>
 	</div>
+
+	<script src="index.js" ></script>
 </body>
 </html>
