--- a/salles.html
+++ b/salles.html
@@ -9,6 +9,7 @@
     
 </head>
 <body>
+	<a id="haut"></a>
 	<!-- création du menu en haut de page -->
 	<div id="menu" >
 		<a href="https://www.louvre.fr/" class="titremenu" id="logo"> <img src="images/logolouvre.png" alt="logo Louvre" height="70px"> </a>
@@ -92,6 +93,7 @@
 				</div>
 			</div>
 				<div id="texte">
+					
 					<h1 id="titresalle" >La création des différentes salles</h1>
 					<h1 class="titretexte" id="texteantiquites">Antiquités:</h1>
 					<h1 class="titreinter" id="texteorientales">Orientales:</h1>
@@ -218,6 +220,12 @@
 					</div>
 				</div>
 	</div>
+
+	<a href="#haut">
+		<div id="bouton" >
+			<img src="images/fleche1.png" alt="retour haut" height="40px">
+		</div>
+	</a>
 
 	<script src="index.js" ></script>
 </body>
