--- a/salles.html
+++ b/salles.html
@@ -23,7 +23,7 @@
 				<p>Salles</p>
 			</div>
 		</a>
-		<a href="#" class="titremenu" id="expo" >
+		<a href="expo.html" class="titremenu" id="expo">
 			<div>
 				<p>Expositions</p>
 			</div>
