--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<!-- création du menu en haut de page -->
 	<div id="menu" >
-		<a href="https://www.louvre.fr/" class="titremenu" id="logo"> <img src="images/logolouvre.png" alt="logo Louvre" height="70px"> </a>
+		<a href="https://www.louvre.fr/" class="titremenu" id="logo" target="_blank"> <img src="images/logolouvre.png" alt="logo Louvre" height="70px"> </a>
 		<a href="index.html" class="titremenu" id="accueil" >
 			<div>
 				Accueil
@@ -25,7 +25,7 @@
 				<p>Salles</p>
 			</div>
 		</a>
-		<a href="#" class="titremenu" id="expo" >
+		<a href="expo.html" class="titremenu" id="expo" >
 			<div>
 				<p>Expositions</p>
 			</div>
@@ -44,7 +44,7 @@
 		<img id="pyramide" src="images/pyramide.png" alt="image pyramide" >
 	</div>
 	<!-- séparation entre l'image d'acceuil et le reste de la page -->
-	<img id= "séparation" src="images/séparation.png" >
+	<img id= "séparation" src="images/séparation.png" alt="image séparation">
 	
 
 
@@ -63,7 +63,7 @@
 					Fin 2016, ses collections comprenaient 554 731 œuvres, dont 35 000 exposées et 264 486 œuvres graphiques. Celles-ci présentent l'art occidental du Moyen Âge à 1848, celui des civilisations antiques qui l'ont précédé et influencé (orientales, égyptienne, grecque, étrusque et romaine), les arts des premiers chrétiens et de l'islam.
 					Situé dans le 1er arrondissement de Paris, sur la rive droite entre la Seine et la rue de Rivoli, le musée se signale par la pyramide de verre de son hall d'accueil, érigée en 1989 dans la cour Napoléon et qui en est devenue emblématique, tandis que la statue équestre de Louis XIV constitue le point de départ de l'axe historique parisien.
 				</p>
-				<p class="sources" > sources : <a class="sources" href="https://fr.wikipedia.org/wiki/Mus%C3%A9e_du_Louvre"> <abbr title="clique pour y accéder"> wikipedia </abbr></a></p>
+				<p class="sources" > sources : <a class="sources" href="https://fr.wikipedia.org/wiki/Mus%C3%A9e_du_Louvre" target="_blank"> <abbr title="clique pour y accéder"> wikipedia </abbr></a></p>
 			</div>
 		</div>
 		<div>
@@ -76,7 +76,7 @@
 					La construction du Louvre est indissociable de l'histoire de Paris. Elle s'étend sur plus de 800 ans, bien que le plan général du palais n'ait été imaginé qu'à la Renaissance. Charles V y établit sa résidence, donnant au palais un statut qu'il a conservé jusqu'au règne de Louis XIV.
 					Avec 10,2 millions de visiteurs en 2018 — dont un quart de Français —, c'est le musée le plus visité au monde3 et le site culturel le plus visité en France devant la tour Eiffel, la cathédrale Notre-Dame de Paris étant en tête des monuments à l'accès libre avec 13,6 millions de visiteurs estimés.
 				</p>
-				<p class="sources" > sources : <a class="sources" href="https://fr.wikipedia.org/wiki/Palais_du_Louvre"> <abbr title="clique pour y accéder"> wikipedia </abbr></a></p>
+				<p class="sources" > sources : <a class="sources" href="https://fr.wikipedia.org/wiki/Palais_du_Louvre" target="_blank"> <abbr title="clique pour y accéder"> wikipedia </abbr></a></p>
 			</div>
 		</div>
 	</div>
