--- a/expo.html
+++ b/expo.html
@@ -33,13 +33,15 @@
 
     <div id="main" >
         <div class="expos" >
-
+            <a href="expo1.html"><img src="images/galerietemps.jpg" alt="Galerie "></a>
         </div>
+    
         <div class="expos" >
-
+            <a href="expo2.html"> </a>
         </div>
-        <div class="expos" >
 
+        <div class="expos" >
+            <a href="expo3.html"></a>
         </div>
     </div>
 
