--- a/expo1.html
+++ b/expo1.html
@@ -32,7 +32,7 @@
 	</div>
 
     <div id="main" >
-        <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1N0CYqGhK0ZwqOVyQReJhy-P1cA2aSA4OM2Sdg2e1ZPg&font=Default&lang=fr&initial_zoom=2' width='100%' height="100%" webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+        <iframe id="timeline" src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1N0CYqGhK0ZwqOVyQReJhy-P1cA2aSA4OM2Sdg2e1ZPg&font=Default&lang=fr&initial_zoom=2' width='100%' height="100%" webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
     </div>                    
 
 
