--- a/salles.html
+++ b/salles.html
@@ -42,7 +42,7 @@
 						<h1>Navigation</h1>
 					</div>
 					<div class="titre deroulant" id="antiquite">
-						<h3>Antiquités</h3>
+						<h3> <a href="#">Antiquités</a></h3>
 					</div>
 					<div class="titre" id="sculptures">
 						<h3> <a href="#textesculptures">Sculptures</a></h3>
