--- a/expo.html
+++ b/expo.html
@@ -33,11 +33,18 @@
 
     <div id="main" >
         <div class="expos" >
-            <a href="expo1.html"><img src="images/galerietemps.jpg" alt="Galerie "></a>
+            <a href="expo1.html">
+                <div class="image" id="image1" > <div><p class="titreimage" >Galerie du Temps</p> </div></div>
+            </a>
+            <p id="infoexpo" >
+
+            </p>
         </div>
     
         <div class="expos" >
-            <a href="expo2.html"> </a>
+            <a href="expo2.html">
+                <div class="image" id="image2" > <div><p class="titreimage" >Galerie du Temps</p> </div></div>
+            </a>
         </div>
 
         <div class="expos" >
