--- a/salles.html
+++ b/salles.html
@@ -42,7 +42,7 @@
 						<h1>Navigation</h1>
 					</div>
 					<div class="titre deroulant" id="antiquite">
-						<h3> <a href="#">Antiquités</a></h3>
+						<h3><a href="#">Antiquités</a></h3>
 					</div>
 					<div class="titre" id="sculptures">
 						<h3> <a href="#textesculptures">Sculptures</a></h3>
@@ -51,7 +51,7 @@
 						<h3> <a href="#textepeintures">Peintures</a> </h3>
 					</div>
 					<div class="titre deroulant" id="pavillon">
-						<h3>Pavillon de l'Horloge</h3>
+						<h3><a href="#">Pavillon de l'Horloge</a></h3>
 					</div>
 					<div class="titre" id="graphiques">
 						<h3> <a href="#textearts">Arts graphiques</a> </h3>
