--- a/expo.html
+++ b/expo.html
@@ -33,7 +33,7 @@
 
     <div id="main" >
         <div class="expos" >
-            <a href="expo1.html">
+            <a href="expo2.html">
                 <div class="image" id="image1" > <div><p class="titreimage" >Galerie du Temps</p> </div></div>
             </a>
             <p id="infoexpo" >
@@ -42,13 +42,15 @@
         </div>
     
         <div class="expos" >
-            <a href="expo2.html">
+            <a href="expo3.html">
                 <div class="image" id="image2" > <div><p class="titreimage" >Galerie du Temps</p> </div></div>
             </a>
         </div>
 
         <div class="expos" >
-            <a href="expo3.html"></a>
+            <a href="expo1.html">
+                <div class="image" id="image3" > <div><p class="titreimage" >Galerie du Temps</p> </div></div>
+            </a>
         </div>
     </div>
 
