--- a/expo.html
+++ b/expo.html
@@ -24,33 +24,50 @@
 				<p>Expositions</p>
 			</div>
 		</a>
-		<a href="#" class="titremenu" id="info" >
+		<a href="info.html" class="titremenu" id="info" >
 			<div>
 				<p>Informations</p>
 			</div>
 		</a>
 	</div>                
-
     <div id="main" >
         <div class="expos" >
             <a href="expo2.html">
                 <div class="image" id="image1" > <div><p class="titreimage" >Galerie du Temps</p> </div></div>
             </a>
-            <p id="infoexpo" >
-
-            </p>
+            <div class="texteexpo" >
+                <p class="infoexpo" >
+                    <b class="t1" >Antiquité:</b> <br>
+                    <br>
+                    Cette expositions rescence quelques unes des plus belles oeuvres exposées dans <b>La Galerie du Temps</b> et résume la période de <b>l'Antiquité</b> au travers d'une vingtaine d'oeuvres.
+                </p>
+            </div>
         </div>
     
         <div class="expos" >
             <a href="expo3.html">
                 <div class="image" id="image2" > <div><p class="titreimage" >Galerie du Temps</p> </div></div>
             </a>
+            <div class="texteexpo">
+                <p class="infoexpo">
+                    <b class="t1" >Moyen-Age:</b> <br>
+                    <br>
+                    Cette expositions rescence quelques unes des plus belles oeuvres exposées dans <b>La Galerie du Temps</b> et résume la période du <b>Moyen-Age</b> au travers d'une vingtaine d'oeuvres.
+                </p>
+            </div>
         </div>
 
         <div class="expos" >
             <a href="expo1.html">
                 <div class="image" id="image3" > <div><p class="titreimage" >Galerie du Temps</p> </div></div>
             </a>
+            <div class="texteexpo">
+                <p class="infoexpo">
+                    <b class="t1" >Temps Modernes:</b> <br>
+                    <br>
+                    Cette expositions rescence quelques unes des plus belles oeuvres exposées dans <b>La Galerie du Temps</b> et résume la période des <b>Temps Modernes</b> au travers d'une vingtaine d'oeuvres.
+                </p>
+            </div>
         </div>
     </div>
 
