--- a/expo3.html
+++ b/expo3.html
@@ -24,7 +24,7 @@
 				<p>Expositions</p>
 			</div>
 		</a>
-		<a href="#" class="titremenu" id="info" >
+		<a href="info.html" class="titremenu" id="info" >
 			<div>
 				<p>Informations</p>
 			</div>
