--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<p>Expositions</p>
 			</div>
 		</a>
-		<a href="#" class="titremenu" id="info" >
+		<a href="info.html" class="titremenu" id="info" >
 			<div>
 				<p>Informations</p>
 			</div>
