--- a/info.html
+++ b/info.html
@@ -1,9 +1,57 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Informations</title>
+    <link rel="icon" type="image/png" href="images/icone.png"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="info.css" media="screen">
+    <title>Le Louvre - Informations </title>
 </head>
 <body>
+
+    <div id="menu" >
+		<a href="https://www.louvre.fr/" class="titremenu" id="logo" target="_blank"> <img src="images/logolouvre.png" alt="logo Louvre" height="70px"> </a>
+		<a href="index.html" class="titremenu" id="accueil" >
+			<div>
+				Accueil
+			</div>
+		</a>
+		<a href="salles.html" class="titremenu" id="salle" >
+			<div>
+				<p>Salles</p>
+			</div>
+		</a>
+		<a href="expo.html" class="titremenu" id="expo" >
+			<div>
+				<p>Expositions</p>
+			</div>
+		</a>
+		<a href="info.html" class="titremenu" id="info" >
+			<div>
+				<p>Informations</p>
+			</div>
+		</a>
+	</div>                
     
+	<div id="main" >
+        <div id="menu2">
+            test1
+        </div>
+            <div id="texte">
+                <div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14848.327797946542!2d2.334144571731317!3d48.86129340490287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671d877937b0f%3A0xb975fcfa192f84d4!2sMus%C3%A9e%20du%20Louvre!5e0!3m2!1sfr!2sfr!4v1615666826395!5m2!1sfr!2sfr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>               
+                </div>
+                <div>
+                    <p>
+                        <h1>test titre</h1>
+                        <br>
+                        texteeof
+                        irhnr   uizhr <br>
+                        jpoi
+                    </p>
+                </div>
+            </div>
+    </div>
+
+
 </body>
 </html>
