--- a/salles.html
+++ b/salles.html
@@ -28,7 +28,7 @@
 				<p>Expositions</p>
 			</div>
 		</a>
-		<a href="#" class="titremenu" id="info" >
+		<a href="info.html" class="titremenu" id="info" >
 			<div>
 				<p>Informations</p>
 			</div>
@@ -42,7 +42,7 @@
 						<h1>Navigation</h1>
 					</div>
 					<div class="titre deroulant" id="antiquite">
-						<h3><a href="#">Antiquités</a></h3>
+						<h3>Antiquités</h3>
 					</div>
 					<div class="titre" id="sculptures">
 						<h3> <a href="#textesculptures">Sculptures</a></h3>
@@ -51,7 +51,7 @@
 						<h3> <a href="#textepeintures">Peintures</a> </h3>
 					</div>
 					<div class="titre deroulant" id="pavillon">
-						<h3><a href="#">Pavillon de l'Horloge</a></h3>
+						<h3>Pavillon de l'Horloge</h3>
 					</div>
 					<div class="titre" id="graphiques">
 						<h3> <a href="#textearts">Arts graphiques</a> </h3>
