--- a/info.html
+++ b/info.html
@@ -34,21 +34,26 @@
     
 	<div id="main" >
         <div id="menu2">
-            test1
+            <div id="menu2accueil"  class="menu20">
+                <div id="tete" >
+                    <h1>Contacts</h1>
+                </div>
+                <div class="titre" >
+                    <h3>Tél. : +33 (0)1 40 20 53 17</h3>
+                </div>
+                <div class="titre" >
+                    <h3>E-mail : <a href="mailto:info@louvre.fr">info@louvre.fr </a><br> <a href="mailto:handicap@louvre.fr">handicap@louvre.fr</a> </h3>
+                </div>
+                <div class="titre" id="peintures">
+                    <h3>Banque d'info : <br> +33 (0)1 40 20 53 17 </h3>
+                </div>
+                <div class="titre" id="graphiques">
+                    <h3>Emploi : <br> <a href="https://www.louvre.fr/OFFRES-D-EMPLOI" target="_blank" >louvre.fr/offres-d-emploi</a> </h3>
+                </div>
+            </div>
         </div>
             <div id="texte">
-                <div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14848.327797946542!2d2.334144571731317!3d48.86129340490287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e671d877937b0f%3A0xb975fcfa192f84d4!2sMus%C3%A9e%20du%20Louvre!5e0!3m2!1sfr!2sfr!4v1615666826395!5m2!1sfr!2sfr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>               
-                </div>
-                <div>
-                    <p>
-                        <h1>test titre</h1>
-                        <br>
-                        texteeof
-                        irhnr   uizhr <br>
-                        jpoi
-                    </p>
-                </div>
+                <h1 id="titreinfo" > Informations pratiques</h1>
             </div>
     </div>
 
